--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,12 @@
 @font-face {
+    font-family: 'Chloe-Regular';
+    src: url('./assets/fonts/Chloe/Regular/Chloe-Regular.eot'); /* IE9 Compat Modes */
+    src: url('./assets/fonts/Chloe/Regular/Chloe-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('./assets/fonts/Chloe/Regular/Chloe-Regular.woff') format('woff'), /* Modern Browsers */
+         url('./assets/fonts/Chloe/Regular/Chloe-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
+         url('./assets/fonts/Chloe/Regular/Chloe-Regular.svg#svgChloe-Regular') format('svg'); /* Legacy iOS */
+}
+@font-face {
     font-family: 'ProximaNova-Regular';
     src: url('./assets/fonts/ProximaNova/Regular/ProximaNova-Regular.eot'); /* IE9 Compat Modes */
     src: url('./assets/fonts/ProximaNova/Regular/ProximaNova-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -21,4 +29,7 @@
          url('./assets/fonts/ProximaNova/Bold/ProximaNova-Bold.woff') format('woff'), /* Modern Browsers */
          url('./assets/fonts/ProximaNova/Bold/ProximaNova-Bold.ttf')  format('truetype'), /* Safari, Android, iOS */
          url('./assets/fonts/ProximaNova/Bold/ProximaNova-Bold.svg#svgProximaNova-Bold') format('svg'); /* Legacy iOS */
+}
+body{
+    background-color: #FFFFFF;
 }
