--- a/src/components/navbar/_navbar.scss
+++ b/src/components/navbar/_navbar.scss
@@ -20,18 +20,41 @@
             border-bottom: solid .1rem transparent;
         }
     }
+    &__logo{
+        margin: 0 0 0 1rem;
+        width: 5rem;
+        height: 3.5rem;
+    }
+    &__cart-index{
+        border-radius: 50%;
+        background-color: #73A8A0;
+        color: white;
+        text-align: center;
+        width: 1rem;
+        height: 0.7rem;
+        padding: .4rem 0 0 0;
+        font-size: .5rem;
+        margin: -1.15rem 0 0 0;
+    }
+    &__image{
+        width: 1.2rem;
+        height: 1rem;
+    }
+}
+.--links{
+    display: none !important;
 }
 .--active{
     color: black !important;
     border-color: #73A8A0 !important;
 }
-.--align-center{
-    align-self: center;
-}
 .--space-between{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+.--reverse{
+    margin: 1.5rem 2rem 0 1rem;
 }
 @media (min-width: 801px) {
     .navbar{
@@ -63,18 +86,20 @@
         &__cart-index{
             width: 2vh;
             height: 1.3vh;
-            border-radius: 50%;
-            background-color: #73A8A0;
             padding: .7vh 0 0 0;
-            color: white;
             font-size: .7vh;
-            text-align: center;
             margin: -1.8vh 0 0 0;
         }
         &__image{
             width: 2vh;
             height: 2vh;
         }
+    }
+    .--align-center{
+        align-self: center;
+    }
+    .--links{
+        display: flex !important;
     }
     .--reverse{
         margin: 3vh 5vh 0 2vh;
