Minor file structure update

--- a/src/views/inicio/_page.scss
+++ b/src/views/inicio/_page.scss
@@ -135,7 +135,7 @@
             grid-template-rows: auto;
             height: 55vh;
         }
-        &__carousel{
+        &__filler{
             display: flex;
             flex-direction: row;
             margin: 2vh 0 2vh 0 !important;
