--- a/src/views/inicio/_page.scss
+++ b/src/views/inicio/_page.scss
@@ -50,7 +50,10 @@
     &__button{
         font-family: 'ProximaNova-Semibold';
         background-color: #73A8A0;
-        display: none;
+
+        &-foward{
+            margin: 0 0 0 .7rem;
+        }
     }
     &__filler{
         display: flex;
@@ -136,7 +139,6 @@
             }
         }
         &__button{
-            display: block;
             font-size: 1.7vh;
             margin: 2.3vh 0 0 0;
             padding: 1.5vh;
