--- a/src/views/inicio/_page.scss
+++ b/src/views/inicio/_page.scss
@@ -11,6 +11,7 @@
         background-size: 33rem;
         height: 4.3rem;
         padding: 1.5rem 0 1rem 0;
+        width: 100%;
 
         &-headline{
             display: flex;
@@ -60,6 +61,7 @@
         flex-direction: row;
         overflow-x: scroll;
         margin: 1rem 0 1rem 0;
+        width: 100%;
 
         &-content{
             display: flex;
@@ -108,6 +110,19 @@
             }
         }
     }
+    &__post{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        
+        &-title{
+            font-family: 'Chloe-Regular';
+            background-color: white;
+            font-size: 2.6rem;
+            margin: -1.5rem 0 3rem 0;
+            padding: 0 1vh 0 1vh;
+        }
+    }
 }
 @media (min-width: 768px){
     .page{
@@ -139,9 +154,7 @@
             }
         }
         &__button{
-            font-size: 1.7vh;
-            margin: 2.3vh 0 0 0;
-            padding: 1.5vh;
+            font-size: 2vh;
 
             &:hover{
                 cursor: pointer;
@@ -185,6 +198,13 @@
                 & .page__banner-title{
                     font-size: 3vh;
                 }
+            }
+        }
+        &__post{
+            &-title{
+                font-size: 5vh;
+                margin: -3vh 0 5vh 0;
+                padding: 0 1vh 0 1vh;
             }
         }
     }
