--- a/src/views/_page.scss
+++ b/src/views/_page.scss
@@ -51,7 +51,8 @@
     &__button{
         font-family: 'ProximaNova-Semibold';
         background-color: #73A8A0;
-
+        text-decoration: none;
+        
         &-foward{
             margin: 0 0 0 .7rem;
         }
@@ -72,9 +73,11 @@
             display: flex;
             flex-direction: column;
             width: 8rem;
-
             margin: 0 0 0 1rem;
 
+            & a{
+                text-decoration: none;
+            }
 
             &-image{
                 width: 100%;
@@ -135,7 +138,6 @@
 }
 @media (min-width: 801px){
     .page{
-
         &__banner{
             height: 20.5vh;
             background-size: 128vh;
@@ -161,17 +163,31 @@
                 background-color: #7bb3aa;
             }
         }
+        &__cluster{
+            &:hover{
+                cursor: pointer;
+            }
+            &:hover .page__banner-content{
+                transition: all ease-in-out 100ms;
+                background: linear-gradient(0deg, rgba(0,0,0,0.65) 70%, rgba(255,255,255,0) 100%);
+            }
+        }
         &__filler{
             margin: 2vh 0 2vh 0;
             overflow-x: auto;
-            
+
             &-content{
                 margin: 1vh 0 1vh 0;
                 width: 100%;
             }
             &-product{
                 width: auto;
+                border-bottom: .1vh solid transparent;
 
+                &:hover{
+                    cursor: pointer;
+                    border-bottom: .1vh solid #c4c4c4;
+                }
                 &-image{
                     height: 15vh;
                 }
