Minor quality of life update

--- a/src/views/_page.scss
+++ b/src/views/_page.scss
@@ -27,6 +27,8 @@
         }
         &-content{
             background: linear-gradient(0deg, rgba(0,0,0,0.65) 60%, rgba(255,255,255,0) 100%);
+            text-decoration: none;
+            color: inherit;
         }
         &-title{
             font-family: 'Chloe-Regular';
@@ -175,6 +177,14 @@
                 font-size: 2vh;
                 margin: 2.3vh 0 0 0;
             }
+            &-content{
+                &:hover{
+                    transition: all ease-in-out 100ms;
+                    background: linear-gradient(0deg, rgba(0,0,0,0.65) 70%, rgba(255,255,255,0) 100%);
+                    cursor: pointer;
+                    text-decoration: underline;
+                }
+            }
         }
         &__button{
             font-size: 2vh;
@@ -182,15 +192,6 @@
             &:hover{
                 cursor: pointer;
                 background-color: #7bb3aa;
-            }
-        }
-        &__node{
-            &:hover{
-                cursor: pointer;
-            }
-            &:hover .page__banner-content{
-                transition: all ease-in-out 100ms;
-                background: linear-gradient(0deg, rgba(0,0,0,0.65) 70%, rgba(255,255,255,0) 100%);
             }
         }
         &__filler{
