--- a/src/components/Navbar/_navbar.scss
+++ b/src/components/Navbar/_navbar.scss
@@ -82,6 +82,10 @@
         &__logo{
             width: 10vh;
             height: 7vh;
+
+            &:hover{
+                opacity: 0.6;
+            }
         }
         &__cart-index{
             width: 2vh;
