--- a/src/views/_page.scss
+++ b/src/views/_page.scss
@@ -85,7 +85,6 @@
             & a{
                 text-decoration: none;
             }
-
             &-image{
                 width: 100%;
                 height: 7rem;
@@ -131,6 +130,33 @@
             font-size: 2.6rem;
             margin: -1.5rem 0 3rem 0;
             padding: 0 1vh 0 1vh;
+        }
+        &-info{
+            font-family: 'ProximaNova-Regular';
+            display: flex;
+            align-content: space-between;
+            width: 100%;
+        }
+        &-banner{
+            width: 105%;
+            height: 15rem;
+        }
+        &-type{
+            margin: 0 auto 0 0;
+        }
+        &-onwership{
+            margin: 0 0 0 auto;
+        }
+        &-article{
+            text-align:justify;
+            &-text{
+                font-family: 'Adamina-Regular';
+                font-size: 1rem;
+            }
+            &-title{
+                font-family: 'ProximaNova-Bold';
+                font-size: 1.25rem;
+            }
         }
     }
     &__product{
@@ -244,6 +270,22 @@
                 margin: -3vh 0 5vh 0; 
                 padding: 0 1vh 0 1vh;
             }
+            &-banner{
+                width: 100%;
+                height: 70vh;
+            }   
+            &-article{
+                margin: 5vh 0 0 0;
+                & p{
+                    margin: 0 0 2vh 0 ;
+                }
+                &-text{
+                    font-size: 2vh;
+                }
+                &-title{
+                    font-size: 3vh;
+                }
+            } 
         }
         &__product{
             margin: 6vh 0 0 0;
