--- a/src/views/_page.scss
+++ b/src/views/_page.scss
@@ -149,13 +149,18 @@
         }
         &-article{
             text-align:justify;
+            margin: 2rem 0 0 0;
+
+            & p{
+                margin: 0 0 1rem 0 ;
+            }
             &-text{
                 font-family: 'Adamina-Regular';
                 font-size: 1rem;
             }
             &-title{
                 font-family: 'ProximaNova-Bold';
-                font-size: 1.25rem;
+                font-size: 1.7rem;
             }
         }
     }
@@ -276,8 +281,9 @@
             }   
             &-article{
                 margin: 5vh 0 0 0;
+
                 & p{
-                    margin: 0 0 2vh 0 ;
+                    margin: 0 0 2vh 0;
                 }
                 &-text{
                     font-size: 2vh;
