--- a/src/views/_mods.scss
+++ b/src/views/_mods.scss
@@ -158,12 +158,22 @@
 }
 .--type-info{
     font-family: 'ProximaNova-SemiBold';
+    font-size: .6rem;
+    margin: 0 0 .5rem 0;
 }
 .--title-info{
-    font-family: 'ProximaNova-Bold';
+    font-family: 'ProximaNova-Regular';
+    font-size: 1rem;
 }
 .--user-info{
-    font-family: 'ProximaNova-Regular';
+    font-family: 'ProximaNova-Bold';
+    font-size: .7rem;
+    margin: .5rem 0 0 0;
+}
+.--price-info{
+    font-family: 'ProximaNova-Bold';
+    font-size: 1rem;
+    margin: .5rem 0 0 0;
 }
 @media (min-width: 801px){
     .--central{
@@ -285,6 +295,10 @@
     }
     .--user-info{
         font-size: 1.4vh;
-        margin: 1vh 0 0 0
+        margin: 1vh 0 0 0;
+    }
+    .--price-info{
+        font-size: 2vh;
+        margin: 1vh 0 0 0;
     }
 }
