--- a/src/views/_mods.scss
+++ b/src/views/_mods.scss
@@ -175,6 +175,74 @@
     font-size: 1rem;
     margin: .5rem 0 0 0;
 }
+.--playing{
+    -webkit-animation: pulse 2s infinite;
+    -moz-animation: pulse 2s infinite;
+    -o-animation: pulse 2s infinite;
+    animation: pulse 2s infinite;
+    transition: all ease-in-out .1s;
+    border-color: #73A8A0 !important;
+    border-width: .3rem;
+}
+.--fade-up{
+    background: linear-gradient(0deg, rgba(0,0,0,0.65) 50%, rgba(255,255,255,0) 100%);
+}
+@-webkit-keyframes pulse {
+    0% {
+        -webkit-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
+    }    
+    70% {
+        -webkit-box-shadow: 0 0 0 1rem rgba(115, 168, 160, 0);
+    }    
+    100% {
+        -webkit-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+    }
+}
+@-moz-keyframes pulse {
+    0% {
+        box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
+    }    
+    70% {
+        box-shadow: 0 0 0 1rem rgba(115, 168, 160, 0);
+    }    
+    10% {
+        box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+
+    }
+}
+@-ms-keyframes pulse {
+    0% {
+        -ms-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
+    }    
+    70% {
+        -ms-box-shadow: 0 0 0 1rem rgba(115, 168, 160, 0);
+    }    
+    100% {
+        -ms-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+    }
+}
+@-o-keyframes pulse {
+    0% {
+        box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
+    }    
+    70% {
+        box-shadow: 0 0 0 1rem rgba(115, 168, 160, 0);
+    }    
+    100% {
+        box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+    }
+}
+@keyframes pulse {
+    0% {
+        box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
+    }    
+    70% {
+        box-shadow: 0 0 0 1rem rgba(115, 168, 160, 0);
+    }    
+    100% {
+        box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+    }
+}
 @media (min-width: 801px){
     .--central{
         width: 65%;
@@ -300,5 +368,67 @@
     .--price-info{
         font-size: 2vh;
         margin: 1vh 0 0 0;
+    }
+    .--playing{
+        border-width: 1vh;
+    }
+    .--fade-up{
+        background: linear-gradient(0deg, rgba(0,0,0,0.65) 20%, rgba(255,255,255,0) 100%);
+    }
+    @-webkit-keyframes pulse {
+        0% {
+            -webkit-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
+        }    
+        70% {
+            -webkit-box-shadow: 0 0 0 4vh rgba(115, 168, 160, 0);
+        }    
+        100% {
+            -webkit-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+        }
+    }
+    @-moz-keyframes pulse {
+        0% {
+            box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
+        }    
+        70% {
+            box-shadow: 0 0 0 4vh rgba(115, 168, 160, 0);
+        }    
+        100% {
+            box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+    
+        }
+    }
+    @-ms-keyframes pulse {
+        0% {
+            -ms-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
+        }    
+        70% {
+            -ms-box-shadow: 0 0 0 3vh rgba(115, 168, 160, 0);
+        }    
+        100% {
+            -ms-box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+        }
+    }
+    @-o-keyframes pulse {
+        0% {
+            box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
+        }    
+        70% {
+            box-shadow: 0 0 0 4vh rgba(115, 168, 160, 0);
+        }    
+        100% {
+            box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+        }
+    }
+    @keyframes pulse {
+        0% {
+            box-shadow: 0 0 0 0 rgba(115, 168, 160, 0.4);
+        }    
+        70% {
+            box-shadow: 0 0 0 4vh rgba(115, 168, 160, 0);
+        }    
+        100% {
+            box-shadow: 0 0 0 0 rgba(115, 168, 160, 0);
+        }
     }
 }
