--- a/src/views/_page.scss
+++ b/src/views/_page.scss
@@ -227,6 +227,12 @@
             }
         }
     }
+    &__podcast {
+        display: flex;
+        width: 105%;
+        height: 15rem;
+        margin: -15rem 0 0 0;
+    }
 }
 @media (min-width: 768px){
     .page{
@@ -435,6 +441,11 @@
                     height: 20vh;
                 }
             }
+        }
+        &__podcast {
+            height: 70vh;
+            width: 100%;
+            margin: -70vh 0 0 0;
         }
     }
 }
